--- a/double-and-triple-integrals.html
+++ b/double-and-triple-integrals.html
@@ -1583,7 +1583,7 @@
       </div>
 
       <p>
-        Finally, a solid region $R$ is of <strong>type 2</strong> if it is of the form
+        Finally, a solid region $R$ is of <strong>type 3</strong> if it is of the form
       </p>
       <div class="eqwrapper">
         \[
@@ -1723,7 +1723,7 @@
 
         <div class="eqwrapper">
           \begin{eqnarray*}
-          \int_{x=0}^{x=1}\int_{y=\sqrt{x}}^{y=1}\left[ \int_{z=0}^{z=1-y} f
+          I = \int_{x=0}^{x=1}\int_{y=\sqrt{x}}^{y=1}\left[ \int_{z=0}^{z=1-y} f
           ~dz
           \right]dy~dx = \int_{x=0}^{x=1} \int_{z=0}^{z=1-\sqrt{x}}
           \left[ \int_{y=\sqrt{x}}^{y=1-z}
