--- a/integrals-over-paths-and-surfaces.html
+++ b/integrals-over-paths-and-surfaces.html
@@ -133,7 +133,11 @@
       <p>
         <i class="fa-solid fa-bars w3-button w3-hide-large w3-xlarge" onclick="w3_open()"></i>
 
-        <span id="myTitle" class="w3-hide">Integrals Over Paths and Surfaces</span>
+        <span id="myTitle" class="w3-hide">
+          <span class="w3-hide-small">Integrals Over Paths and Surfaces</span>
+          <span class="w3-hide-large">Integrals Over Paths ...</span>
+
+        </span>
 
         <span title="Dark/Night Mode" id="dark-mode-toggle" class="topDark w3-theme w3-hide-small">
           <i class="fa-regular fa-sun"></i>
