--- a/integrals-over-paths-and-surfaces.html
+++ b/integrals-over-paths-and-surfaces.html
@@ -1450,7 +1450,7 @@
       </p>
       <div class="eqwrapper">
         \[
-        \big(\r_u(a,b)\times\r_v(a,b)\big)\cdot \big((x~\i+y~\j+z~\k) - \r(a,b)\big)=0.
+        \big(\r_u(a,b)\times\r_v(a,b)\big)\pd \big((x~\i+y~\j+z~\k) - \r(a,b)\big)=0.
         \]
       </div>
 
