--- a/double-and-triple-integrals.html
+++ b/double-and-triple-integrals.html
@@ -1128,7 +1128,7 @@
         The following diagram explains the relationship between the polar variables
         $r,$
         $\theta$
-        and the usual rectangular ones $x, y$.
+        and the usual rectangular ones $x, y.$
       </p>
 
       <div style="text-align: center;">
