--- a/integrals-over-paths-and-surfaces.html
+++ b/integrals-over-paths-and-surfaces.html
@@ -135,7 +135,7 @@
 
         <span id="myTitle" class="w3-hide">
           <span class="w3-hide-small">Integrals Over Paths and Surfaces</span>
-          <span class="w3-hide-large">Integrals Over Paths ...</span>
+          <span class="w3-hide-large w3-hide-medium">Integrals Over Paths ...</span>
 
         </span>
 
