--- a/double-and-triple-integrals.html
+++ b/double-and-triple-integrals.html
@@ -1750,7 +1750,7 @@
         </figure>
 
         <p>
-          There are other three more possible orders in which we can integrate.
+          There are  three more possible orders in which we can integrate.
           Below you can see all the possible combinations with their corresponding
           projections on the $xy,$ $yz,$ and $xz$ planes.
         </p>
@@ -1766,7 +1766,7 @@
               <td style="width:80%;text-align:left">
 
                 <span>
-                  $ \quad \ra \displaystyle \int_0^1$
+                  $ \quad \ra \quad \displaystyle \int_0^1$
                 </span>
                 <span>
                   $\displaystyle \int_{\sqrt{x}}^{1}$
@@ -1820,7 +1820,7 @@
               </td>
               <td style="width:80%;text-align:left">
                 <span>
-                  $\quad \ra\displaystyle \int_0^1$
+                  $\quad \ra \quad \displaystyle \int_0^1$
                 </span>
                 <span>
                   $\displaystyle \int_{0}^{1-z}$
@@ -1874,7 +1874,7 @@
               </td>
               <td style="width:80%;text-align:left">
                 <span>
-                  $\quad \ra\displaystyle \int_0^1$
+                  $\quad \ra \quad \displaystyle \int_0^1$
                 </span>
                 <span>
                   $\displaystyle \int_{0}^{1-\sqrt{x}}$
@@ -2118,7 +2118,7 @@
           \begin{eqnarray*}
           V =  \iiint_V  ~dV &amp;=&amp; \int_{\phi=0}^{\phi=\pi} \int_{\theta=0}^{\theta=2\pi} \int_{r=0}^{r=R} r^2\sin \phi ~dr~d\theta~ d\phi \\
           &amp;=&amp; \left( \int_{\phi=0}^{\phi=\pi} \sin\phi ~d\phi \right) \left( \int_{\theta=0}^{\theta=2\pi}~d\theta \right)\left( \int_{r=0}^{r=R}r^2~dr\right) \\
-          &amp;=&amp; \left( -\cos\phi \Bigg|_{\phi=0}^{\phi=\pi} \right) \left(\theta\Bigg|_{\theta=0}^{\theta=2\pi} \right)\left(\frac{r^3}{3}\Bigg|_{r=0}^{r=R}\right) \\
+          &amp;=&amp; \bigg( -\cos\phi \bigg|_{\phi=0}^{\phi=\pi} \bigg) \bigg(\theta\bigg|_{\theta=0}^{\theta=2\pi} \bigg)\left(\frac{r^3}{3}\bigg|_{r=0}^{r=R}\right) \\
           &amp;=&amp;  2 ~(2 \pi) \left( \frac{R^3}{3}\right)\\ 
           &amp;=&amp;  \frac{4}{3} \pi R^3.
           \end{eqnarray*}
