--- a/integrals-over-paths-and-surfaces.html
+++ b/integrals-over-paths-and-surfaces.html
@@ -356,7 +356,9 @@
 
     </div>
 
+    <br>
     <hr>
+    <br>
 
     <div id="section-2">
 
@@ -878,7 +880,9 @@
 
     </div>
 
+    <br>
     <hr>
+    <br>
 
     <div id="section-3">
       <h2>Line Integrals of Gradient Fields</h2>
@@ -970,7 +974,9 @@
 
     </div>
 
+    <br>
     <hr>
+    <br>
 
     <div id="section-4">
 
@@ -1568,11 +1574,14 @@
         </a>
       </div>
 
-      <br>
-      <hr>
+      
 
 
     </div>
+
+    <br>
+    <hr>
+    <br>
 
 
     <div id="section-5">
@@ -1765,9 +1774,12 @@
 
       </div>
 
-      <hr>
 
     </div>
+
+    <br>
+    <hr>
+    <br>
 
 
     <div id="section-6">
@@ -2013,12 +2025,15 @@
 
       </div>
 
-      <br>
-      <hr>
+  
 
 
 
     </div>
+
+    <br>
+    <hr>
+    <br>
 
 
     <div id="section-7">
@@ -2279,18 +2294,15 @@
           determined by the velocity field $\F(x,y,z)= z~\i+y~\j+x~\k.$
         </p>
 
-        
-
-        <!--<div style="text-align: center;">
-          <iframe loading="lazy" width="70%" height="500px" scrolling="no"
-        style="border: 1px solid black; overflow: hidden; margin-top: 10px;" 
-        src="https://www.dynamicmath.xyz/math2001/sketches/flux-surface-example-43"></iframe>
-        <br/>
-         <a class="w3-medium w3-button w3-round-xlarge w3-theme w3-hover-grey"
-          href="https://www.dynamicmath.xyz/math2001/sketches/flux-surface-example-43" target="_blank">
+        <div style="text-align: center;">
+          <iframe loading="lazy" width="70%" height="500px" scrolling="no" style="border: 1px solid black; overflow: hidden; margin-top: 10px;" src="https://www.dynamicmath.xyz/math2001/sketches/flux-surface-example-43"></iframe>
+        <br>
+         <a class="w3-medium w3-button w3-round-xlarge w3-theme w3-hover-grey" href="https://www.dynamicmath.xyz/math2001/sketches/flux-surface-example-43" target="_blank">
           Fullscreen <i class="fas fa-external-link-alt"></i>
           </a>
-        </div>-->
+        </div>
+
+        <!---->
 
         <p>
           To find the net outward flux we need to evaluate the following integral:
