--- a/double-and-triple-integrals.html
+++ b/double-and-triple-integrals.html
@@ -364,7 +364,7 @@
         <li>Take the limit as the number of slices increases and their thickness approaches zero.</li>
       </ol>
 
-      <iframe frameborder="0" height="400px" scrolling="no" src="https://www.dynamicmath.xyz/math2001/sketches/solid-approx/" style="border: 1px solid black; overflow: hidden;" width="100%">
+      <iframe frameborder="0" height="400px" scrolling="no" src="applets/p5js/solid-approx/" style="border: 1px solid black; overflow: hidden;" width="100%">
       </iframe>
 
     </div>
