--- a/index.html
+++ b/index.html
@@ -304,7 +304,8 @@
                     Miguel Díaz, Ruan Ramon, Maciej Lasota,
                     Christopher-Alexander Hermanns, Aarón Reyes,
                     Gabriela Sofia Marin Sanchez, Jerome Siegler,
-                    Yashar Shoraka, Jeff Butterworth, Ihsan Karabulut.
+                    Yashar Shoraka, Jeff Butterworth, Shaun MacMillan, Ihsan Karabulut, 
+                    Elias Sanchez Angarano.
                 </strong>
 
                 <br>
