--- a/double-and-triple-integrals.html
+++ b/double-and-triple-integrals.html
@@ -1280,11 +1280,16 @@
         Just be careful!
         <strong>Don't forget to add the factor $r$ on the right side.</strong>
         A classical method for remembering this
-        is shown in Figure , where the "infinitesimal"
+        is shown in Figure 14, where the "infinitesimal"
         polar rectangle can be thought of as an
-        ordinary rectangle with dimensions $r ~d\theta$ and $dr$
-        and therefore has "area" $dA= r dr d\theta.$
+        ordinary rectangle with dimensions $r \,d\theta$ and $dr$
+        and therefore has "area" $dA= r\, dr \,d\theta.$
       </p>
+
+      <figure>
+        <img style="width:50%" src="imgs/double-triple-integrals/polar-infinitesimal.svg">
+        <figcaption>Infinitesimal polar region.</figcaption>
+      </figure>
 
       <div class="example">
         Find $\iint_D e^{-\left(x^2 + y^2 \right)}~dx~dy,$
