--- a/double-and-triple-integrals.html
+++ b/double-and-triple-integrals.html
@@ -1202,7 +1202,9 @@
 
       <figure>
         <img style="width:50%" src="https://www.dynamicmath.xyz/math2001/images/chapter-28/chapter-28b-sectorb.svg">
-        <figcaption>A polar grid.</figcaption>
+        <figcaption>
+          A polar grid.
+        </figcaption>
       </figure>
 
       <p>
@@ -1221,7 +1223,9 @@
       </p>
       <figure>
         <img style="width:50%" src="https://www.dynamicmath.xyz/math2001/images/chapter-28/chapter-28b-sector.svg">
-        <figcaption>$P = (x^*, y^*)=(r^*, \theta^*).$</figcaption>
+        <figcaption>
+          $P = (x^*, y^*)=(r^*, \theta^*).$
+        </figcaption>
       </figure>
       <p>
         The area of the polar rectangle containing $P$ can be approximated
@@ -1288,7 +1292,9 @@
 
       <figure>
         <img style="width:50%" src="imgs/double-triple-integrals/polar-infinitesimal.svg">
-        <figcaption>Infinitesimal polar region.</figcaption>
+        <figcaption>
+          Infinitesimal polar region.
+        </figcaption>
       </figure>
 
       <div class="example">
