--- a/applications-of-integration.html
+++ b/applications-of-integration.html
@@ -169,7 +169,9 @@
         In the mean time enjoy this beautiful animation:
       </p>
 
-      <iframe frameborder="0" height="500px" scrolling="no" src="https://www.dynamicmath.xyz/math2001/sketches/field-lines/" style="border: 1px solid black; overflow: hidden;" width="100%">
+      <iframe frameborder="0" height="500px" scrolling="no" 
+              src="applets/threejs/solids/" 
+              style="border: 1px solid black; overflow: hidden;" width="100%">
       </iframe>
 
       <div style="text-align: center;">
