--- a/double-and-triple-integrals.html
+++ b/double-and-triple-integrals.html
@@ -600,7 +600,7 @@
       </p>
 
       <div class="example">
-        Let's evalue the integral $\iint_R \left(x^2+y^2\right)dA,$
+        Let's evaluate the integral $\iint_R \left(x^2+y^2\right)dA,$
         where $R = \left\{ (x,y)~|~0\leq x\leq 2, 0\leq y\leq 1 \right\}.$
 
         <div class="eqwrapper">
@@ -1071,7 +1071,7 @@
       </div>
 
       <p>
-        One thing to observe fromthe previous example is that when treating the
+        One thing to observe from the previous example is that when treating the
         double integral as a type II region, the calculations
         become slightly more complex.
         If you encounter this while computing a double integral,
@@ -1151,7 +1151,7 @@
           </div>
         </li>
         <li>
-          If $R= R_1 \cup R_2,$ where $R_1$ and $R_2$ are regioins that don't
+          If $R= R_1 \cup R_2,$ where $R_1$ and $R_2$ are regions that don't
           overlap except perhaps on their boundaries, then
           <div class="eqwrapper">
             $$\displaystyle \iint_R f~dA = \iint_{R_1}f~dA + \iint_{R_2}f~dA$$
@@ -1385,7 +1385,7 @@
         <p>In this case, it is simpler to use polar coordinates.</p>
 
         <p>
-          Substituing the values $x= r\cos\theta$ and $y=r\sin \theta$ in
+          Substituting the values $x= r\cos\theta$ and $y=r\sin \theta$ in
           $$x^2+y^2=2x,$$
           we get $r^2\cos ^2\theta +r^2\sin ^2\theta = 2r \cos \theta.$
           That is
