--- a/integrals-over-paths-and-surfaces.html
+++ b/integrals-over-paths-and-surfaces.html
@@ -308,7 +308,7 @@
 
       <p>
         If $f(x,y)\geq 0,$ this integral has a geometric interpretation as the
-        <emph>area of a fence</emph>.
+        <emp>area of a fence</emp>.
         It is possible to construct a "fence" with base the image of $\c$ and with
         height $f(x,y)$ at $(x,y).$ If $\c$ moves only once along the image of
         $\c,$ then $\int_{\c}f(x,y)\,ds$ represents the area of a side of this fence.
@@ -547,9 +547,9 @@
 
       <p>
         Now, to compute a line integral in any particular case, we can
-        use the original definition, integrate the tangencial component of
+        use the original definition, integrate the tangential component of
         $\F$ along $\c,$ or use the differential form,
-        whichever is easier or more appropiate.
+        whichever is easier or more appropriate.
         Just keep in mind that
         in the definition $\F\big(\c(t)\big)$ is just an abbreviation for the
         vector field $\F\big(x(y),y(t),z(t)\big),$ so we evaluate
@@ -618,16 +618,6 @@
           </iframe>
         </div>
 
-
-
-        <!--
-         <iframe loading="lazy" src=" https://www.desmos.com/3d/ky6wlawlna?embed"
-          style="width:100%;height:500px;border: 1px solid #000000;">
-        </iframe>
-        <iframe src="https://www.desmos.com/calculator/rwpc2wej1k?embed" width="500" height="500" style="border: 1px solid #ccc" frameborder=0></iframe>
-        <iframe loading="lazy" src="https://www.math3d.org/3oozTHEoXX"
-          style="width:100%;height:500px;border: 1px solid #000000;">
-        </iframe>-->
 
 
 
@@ -785,7 +775,7 @@
         \begin{eqnarray*}
         \int_C \F \pd d\s = \int_{\c}\F \pd d\s \quad \text{and}\quad \int_C f~ds = \int_{\c}f~ds,
         \end{eqnarray*}
-        where $\c$ is any orientatio-reserving parametrization of $C.$
+        where $\c$ is any orientation-reserving parametrization of $C.$
       </div>
 
       <p>
@@ -804,7 +794,7 @@
       </div>
       <p>
         The previous formula provides a convenient way to evaluate $\int_C \F \pd d\s,$ since
-        sometimes it is easier to parametrize the componentes $C_i$ individually thant
+        sometimes it is easier to parametrize the components $C_i$ individually thant
         to parametrize $C$ as a whole.
       </p>
 
@@ -817,7 +807,7 @@
         \]
         The main reason is that we can think of describing a $C^1$ path $\c$
         in terms of a moving <strong>position vector</strong> based at the
-        origin and ending at the point $\c(t)$ at time $t.$ Postion vectors are ofter
+        origin and ending at the point $\c(t)$ at time $t.$ Position vectors are ofter
         denoted by
         \[
         \r = x~\j+y~\j+z~\k,
@@ -903,7 +893,7 @@
         \[
         \int_a^bf(x)~dx = F(b)-F(a),
         \]
-        by the fundamenal theorem of calculus. Thus
+        by the fundamental theorem of calculus. Thus
         the value of the integral of $f$ depends only on the value of $F$ at the
         end points of the interval $[a,b].$
       </p>
@@ -912,7 +902,7 @@
         If a vector field $\F$ is the derivative of a function $f$, is it possible to
         determine the value of $\int_{\c}\F\pd d\s$ by the value of $f$ at the endpoints
         $\c(a)$ and $\c(b)?$ The answer is contained in the following
-        <strong>gereralization of the fundamental theorem of calculus</strong>.
+        <strong>generalization of the fundamental theorem of calculus</strong>.
       </p>
 
       <div class="theorem">
@@ -1198,8 +1188,7 @@
       </table>-->
 
 
-      <h2>Parametrizing surfaces using cylindrical
-        and spherical coordinates</h2>
+      <h2>Parametrization of surfaces using cylindrical and spherical coordinates</h2>
 
       <p>
         <span>
